[package]
name = "stm32f_ultrasonic"
version = "0.1.0"
authors = ["Jakob Ledermann <jakob_ledermann@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f3-discovery = "0.4.0"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
panic-reset = "0.1.0"
micromath = "1.0.1"